--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
         <li><strong>$5.3 million in the 2024 AZ-03 Primary:</strong> Yassamin Ansari edged out Raquel Terán by 39 votes, helped by $1.3 million from crypto super PACs.</li>
         <li><strong>$839,000 in the 2018 AZ-02 Primary:</strong> Ann Kirkpatrick relocated districts and won with heavy Super PAC support.</li>
         <li><strong>$257,000 in the 2012 AZ-09 Primary:</strong> Kyrsten Sinema triumphed with help from big-money allies.</li>
-        <li><strong>$354,000 in the 2020 LD2 & LD3 Primaries:</strong> 79% of outside spending went to Daniel and Alma Hernandez.</li>
-        <li><strong>$1.5 million in the 2019 Tucson Mayoral Primary:</strong> Massive outside money flooded this local race.</li>
+        <li><strong>$354,000 in the 2020 LD2 & LD3 Primaries:</strong> 79% of outside spending went to two candidates.</li>
+        <li><strong>$1.5 million in the 2019 Tucson Mayoral Primary:</strong></li>
       </ul>
     
       <p>
