--- a/index.html
+++ b/index.html
@@ -260,9 +260,12 @@
 
 </main>
 
-<a class="floating-button" href="https://docs.google.com/forms/d/e/1FAIpQLSc0cGUVtUrib9rtX-fADTSAqFnEOkWy4wkZ9E-WUEYEvRhiDg/viewform" target="_blank">
-        Endorse the Resolution Now →
-</a>
-
+<div class="mt-8 text-center">
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0cGUVtUrib9rtX-fADTSAqFnEOkWy4wkZ9E-WUEYEvRhiDg/viewform"
+     target="_blank"
+     class="block w-full px-8 py-4 text-lg bg-blue-600 text-white font-semibold rounded hover:bg-blue-700 transition">
+    Endorse the Resolution
+  </a>
+</div>
 </body>
 </html>
