--- a/index.html
+++ b/index.html
@@ -101,24 +101,27 @@
       }
     }
     .floating-button {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background-color: #e01b22; /* Working Families Party red */
-      color: white;
-      padding: 14px 20px;
-      font-size: 16px;
-      font-weight: bold;
-      border: none;
-      border-radius: 8px;
-      text-decoration: none;
-      z-index: 1000;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-      transition: background-color 0.3s ease;
-    }
-    .floating-button:hover {
-        background-color: #a50000;
-    }
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #e01b22; /* Working Families Party red */
+    color: white;
+    padding: 16px 0;
+    font-size: 18px;
+    font-weight: bold;
+    border: none;
+    border-radius: 0;
+    text-align: center;
+    text-decoration: none;
+    z-index: 1000;
+    box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+  }
+  
+  .floating-button:hover {
+    background-color: #a50000;
+  }
 
   </style>
 </head>
