--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     }
 
     header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
       background-color: #111;
       color: #fff;
       padding: 1rem 2rem;
