--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     header {
       background-color: #111;
       color: #fff;
-      padding: 1rem 2rem;
+      padding: 16px 0;
+      width: 100%;
+      top: 0;
+      left: 0;
+      z-index: 1000;
       display: flex;
       justify-content: space-between;
       align-items: center;
