Update  index.html
fixed text buffering horizontal

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     header {
       background-color: #111;
       color: #fff;
+      position: fixed;
       padding: 16px 0;
       width: 100%;
       top: 0;
@@ -111,7 +112,7 @@
     width: 100%;
     background-color: #e01b22; /* Working Families Party red */
     color: white;
-    padding: 16px 0;
+    padding: 16px 20px;
     font-size: 18px;
     font-weight: bold;
     border: none;
