--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       text-transform: uppercase;
       font-weight: bold;
       letter-spacing: 1px;
+      padding: 16px 0;
     }
 
     nav a {
@@ -41,6 +42,7 @@
       text-decoration: none;
       font-weight: bold;
       text-transform: uppercase;
+      padding: 16px 0;
     }
 
     nav a:hover {
