--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       text-transform: uppercase;
       font-weight: bold;
       letter-spacing: 1px;
-      padding: 16px 0;
+      padding: 16px 8px;
     }
 
     nav a {
