--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     header h1 {
       font-size: 1.8rem;
-      margin: 0;
+      margin: 16px;
       text-transform: uppercase;
       font-weight: bold;
       letter-spacing: 1px;
