--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     nav a {
       color: white;
       margin-left: 1.5rem;
+      margin-right: 1.5rem;
       text-decoration: none;
       font-weight: bold;
       text-transform: uppercase;
