--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       background-color: #111;
       color: #fff;
       position: fixed;
-      padding: 16px 8px;
+      padding: 1rem 2rem;
       width: 100%;
       top: 0;
       left: 0;
@@ -33,17 +33,14 @@
       text-transform: uppercase;
       font-weight: bold;
       letter-spacing: 1px;
-      padding: 16px 0;
     }
 
     nav a {
       color: white;
       margin-left: 1.5rem;
-      margin-right: 1.5rem;
       text-decoration: none;
       font-weight: bold;
       text-transform: uppercase;
-      padding: 16px 8px;
     }
 
     nav a:hover {
