--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       background-color: #111;
       color: #fff;
       position: fixed;
-      padding: 1rem 2rem;
+      padding: 1rem 12px;
       width: 100%;
       top: 0;
       left: 0;
