--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       letter-spacing: 1px;
     }
 
+    nav {
+      padding: 0 16px;
+    }
+
     nav a {
       color: white;
       margin-left: 1.5rem;
