--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       left: 0;
       z-index: 1000;
       display: flex;
-      justify-content: space-between;
+      justify-content: space-around;
       align-items: center;
     }
 
