--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <style>
     body {
       margin: 0;
+      padding-bottom: 1rem;
       font-family: 'Segoe UI', sans-serif;
       background-color: #f9f9f9;
       color: #111;
