--- a/index.html
+++ b/index.html
@@ -168,17 +168,19 @@
         <li><strong>Voters hate Big Money.</strong> 77% of Americans support limits on campaign spending. When people believe money controls politics, they feel unheard and disengage. (Pew Research Center, 2018; Haenschen et al., 2024; Schnakenberg et al., 2023)</li>
         <li><strong>Big Money breaks our party and our government.</strong> Outside spending fragments coalitions and undermines effective governance in legislatures. (Norton & Pildes, 2020; Manento, 2019)</li>
       </ul>
-    
-      <h3>Big Money is Here in Arizona</h3>
+      <h3>Big Money is Bigger than Ever</h3>
       <ul>
         <li><strong>Nearly 60% of ads in 2022 Democratic House primaries</strong> were funded by outside groups, not candidates.</li>
         <li><strong>In 2012, just 159 donors gave $1 million or more</strong> — accounting for nearly 60% of all Super PAC funding nationwide.</li>
-        <li><strong>$1.1 million in the 2024 AZ-01 Primary:</strong> Amish Shah won after the primary, then lost the general.</li>
-        <li><strong>$5.3 million in the 2024 AZ-03 Primary:</strong> Yassamin Ansari edged out Raquel Terán by 39 votes, helped by $1.3 million from crypto super PACs.</li>
-        <li><strong>$839,000 in the 2018 AZ-02 Primary:</strong> Ann Kirkpatrick relocated districts and won with heavy Super PAC support.</li>
-        <li><strong>$257,000 in the 2012 AZ-09 Primary:</strong> Kyrsten Sinema triumphed with help from big-money allies.</li>
-        <li><strong>$354,000 in the 2020 LD2 & LD3 Primaries:</strong> 79% of outside spending went to two candidates.</li>
-        <li><strong>$1.5 million in the 2019 Tucson Mayoral Primary:</strong></li>
+      </ul>
+      <h3>Arizona Hasn't Been Spared</h3>
+      <ul>
+        <li><strong>$1.1 million in the 2024 AZ-01 Primary:</strong> Amish Shah won the primary, then lost the general.</li>
+        <li><strong>$5.3 million in the 2024 AZ-03 Primary:</strong> Yassamin Ansari edged out Raquel Terán by 39 votes, helped by over a million dollars in late spending from crypto Super-PACs.</li>
+        <li><strong>$839,000 in the 2018 AZ-02 Primary:</strong> Ann Kirkpatrick moved across the state and won with heavy Super-PAC support.</li>
+        <li><strong>$257,000 in the 2012 AZ-09 Primary:</strong> Kyrsten Sinema began her rise to power (and later, fall from grace) with help from big-money allies.</li>
+        <li><strong>$354,000 in the 2020 LD2 & LD3 Primaries:</strong> 79% of outside spending through July had gone to two candidates.</li>
+        <li><strong>$1.5 million in the 2019 Tucson Mayoral Primary: Much of the outside spending advertised one of the candidates as a 'Clean Money Candidate' - ironic!</strong></li>
       </ul>
     
       <p>
