--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
     <a href="#why" class="nav-link">Why This Matters</a>
     <a href="#resolution" class="nav-link">Our Resolution</a>
     <a href="#endorsements" class="nav-link">Endorsements</a>
+    <a href="#about-us" class="nav-link"> About Us</a>
   </nav>
 
 </header>
@@ -156,6 +157,9 @@
       </p>
       <p>
         <strong>We need your help.</strong> Before June 7th, please <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSc0cGUVtUrib9rtX-fADTSAqFnEOkWy4wkZ9E-WUEYEvRhiDg/viewform" target="_blank">endorse this resolution</a></strong> and <strong>share it with your friends, allies, and fellow Democrats</strong>. Let’s build a wave of grassroots support to make sure our voices are louder than big money.
+      </p>
+      <p>
+        <i>Are you a State Committee Member but can't make it the University of Arizona to vote on this resolution on June 7th? Contact XXX and we will help you find a proxy.</i>
       </p>
     </section>
 
@@ -224,8 +228,6 @@
       <li><strong>Sen. Catherine Miranda</strong>, Senate Democratic Assistant Leader, LD 11</li>
       <li><strong>Sen. Analise Ortiz</strong>, LD 24</li>
       <li><strong>Rep. Mariana Sandoval</strong>, LD 13</li>
-    </ul>
-    <ul id="arizona-endorsements-extra" class="space-y-2 hidden mt-4">
       <li><strong>Rep. Brian Garcia</strong>, LD 8</li>
       <li><strong>Melissa Galarza</strong>, LD12 State Committee Member</li>
       <li><strong>Nicolas Mink</strong>, Vice Chair for the Arizona Democratic Party</li>
@@ -271,6 +273,12 @@
       <li><strong>Marshall Militano</strong>, 2nd Vice Chair, LD 27</li>
     </ul>
   </div>
+</section>
+
+<section id="about-us">
+  <h2>About Us</h2>
+    <p><strong> The Arizona Democratic Party Progressive Council</strong> is the largest Caucus or Council in the Arizona Democratic Party, with over 150 members. We are united by the mission to bring the progressive values of our communities to the state legislature and beyond, to create the Arizona and United States of America we all deserve.
+    Interested in joining us? Check us out on <a href="https://www.facebook.com/AZProgressives/">Facebook</a> and <a href="https://docs.google.com/forms/d/1bkaP9pGeW0iYT7zInHUMyKNmxxyYTzQLMgQj0RtNOh4/viewform?edit_requested=true&fbclid=IwY2xjawKqILNleHRuA2FlbQIxMABicmlkETEyTUppd1FFRFpPQ0w5YkpVAR6OcDpD0OghtricoHbzr2Of0YSrHXxsQlN_19tfICAERUbypdP7RwaVAVHRUQ_aem_qBXmQtzD1Urg48Fq7Tu-iA">sign up</a> to join our council!</p>
 </section>
 
 </main>
