--- a/index.html
+++ b/index.html
@@ -183,8 +183,10 @@
         <li><strong>$5.3 million in the 2024 AZ-03 Primary:</strong> Yassamin Ansari edged out Raquel Terán by 39 votes, helped by over a million dollars in late spending from crypto Super-PACs.</li>
         <li><strong>$839,000 in the 2018 AZ-02 Primary:</strong> Ann Kirkpatrick moved across the state and won with heavy Super-PAC support.</li>
         <li><strong>$257,000 in the 2012 AZ-09 Primary:</strong> Kyrsten Sinema began her rise to power (and later, fall from grace) with help from big-money allies.</li>
-        <li><strong>$354,000 in the 2020 LD2 & LD3 Primaries:</strong> 79% of outside spending through July had gone to two candidates.</li>
-        <li><strong>$1.5 million in the 2019 Tucson Mayoral Primary: Much of the outside spending advertised one of the candidates as a 'Clean Money Candidate' - ironic!</strong></li>
+        <li><strong>$354,000 in the 2020 LD2 & LD3 Primaries:</strong> through July, 79% of this outside spending had gone to just two candidates.</li>
+        <li><strong>$1.5 million in the 2019 Tucson Mayoral Primary:</strong> Much of the outside spending advertised one of the candidates as a 'Clean Money Candidate' - ironic!</li>
+        <li><a href="https://www.tucsonsentinel.com/local/report/072823_primary_election_spending/outside-spending-climbs-tucson-democratic-primaries-city-clerk-probes-unregistered-pac/">Outside spending climbs in Tucson Democratic primaries; City Clerk probes unregistered PAC (2023)</a></li>
+        
       </ul>
     
       <p>
