--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
     <section id="home">
       <h2>Home</h2>
       <p>
-        On <strong>June 7th, 2025</strong>, State Committee Members of the Arizona Democratic Party will vote on a proposal to establish a "People’s Primary" — a bold move to stop billionaires and corporations from buying our primaries. This resolution is about taking back power for working-class Arizonans and ensuring our democracy works for <em>everyone</em>, not just the wealthiest few.
+        On <strong>June 7th, 2025</strong>, State Committee Members of the Arizona Democratic Party will vote on a proposal to establish a "People’s Primary" — a bold move to stop billionaires and corporations from buying our primaries. This resolution is about taking back power for everyday Arizonans and ensuring our democracy works for <em>everyone</em>, not just the wealthiest few.
       </p>
       <p>
         <strong>We need your help.</strong> Before June 7th, please <strong><a href="https://docs.google.com/forms/d/e/1FAIpQLSc0cGUVtUrib9rtX-fADTSAqFnEOkWy4wkZ9E-WUEYEvRhiDg/viewform" target="_blank">endorse this resolution</a></strong> and <strong>share it with your friends, allies, and fellow Democrats</strong>. Let’s build a wave of grassroots support to make sure our voices are louder than big money.
       </p>
       <p>
-        <i>Are you a State Committee Member but can't make it the University of Arizona to vote on this resolution on June 7th? Contact XXX and we will help you find a proxy.</i>
+        <i>Are you a State Committee Member but can't make it the University of Arizona to vote on this resolution on June 7th? The Arizona Democratic Party Progressive Council will help you find a proxy! Contact XXX with details about your situation.</i>
       </p>
     </section>
 
