--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
       <li><strong>Lin Ogburn</strong>, SCM, LD 5</li>
       <li><strong>Sean Feeney</strong>, PC, LD22</li>
       <li><strong>Timothy Kosse</strong>, First Vice Chair, Pima County Democratic Party, SCM</li>
-      <li><strong>Debra Block</strong>SCM, LD 6</li>
+      <li><strong>Debra Block</strong>, SCM, LD 6</li>
       <li><strong>Donna Durand</strong>, Former Chair and SCM, LD25</li>
     </ul>
   </div>
