--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
       text-decoration: none;
       font-weight: bold;
       text-transform: uppercase;
+      display: flex;
+      flex-wrap: wrap;
     }
 
     nav a:hover {
@@ -102,12 +104,15 @@
 
       nav {
         display: flex;
+        flex-wrap: wrap;
         flex-direction: column;
         align-items: flex-end;
       }
 
       nav a {
         margin: 0.5rem 0;
+        white-space: normal;
+        flex: 1 1 auto;
       }
     }
     .floating-button {
