About Us - Kai edits

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
 <section id="about-us">
   <h2>About Us</h2>
-    <p><strong> The Arizona Democratic Party Progressive Council</strong> is the largest Caucus or Council in the Arizona Democratic Party, with over 150 members. We are united by the mission to bring the progressive values of our communities to the state legislature and beyond, to create the Arizona and United States of America we all deserve.
+    <p>The <strong>Stop Big Money AZ</strong> campaign is a project of a grassroots coalition of Arizona Democrats committed to building a party that puts the working class first, not billionaires and big corporations. The coalition is helmed by the <strong>Arizona Democratic Party Progressive Council</strong>, which is the largest Caucus or Council in the Arizona Democratic Party with over 150 members. We are united by the mission to bring the progressive values of our communities to the state legislature and beyond, to create the Arizona and United States of America we all deserve.
     Interested in joining us? Check us out on <a href="https://www.facebook.com/AZProgressives/">Facebook</a> and <a href="https://docs.google.com/forms/d/1bkaP9pGeW0iYT7zInHUMyKNmxxyYTzQLMgQj0RtNOh4/viewform?edit_requested=true&fbclid=IwY2xjawKqILNleHRuA2FlbQIxMABicmlkETEyTUppd1FFRFpPQ0w5YkpVAR6OcDpD0OghtricoHbzr2Of0YSrHXxsQlN_19tfICAERUbypdP7RwaVAVHRUQ_aem_qBXmQtzD1Urg48Fq7Tu-iA">sign up</a> to join our council!</p>
     <p><i>See a problem? Contact the site author, Ben Armentrout, at benarmentrout29@gmail.com. Please be nice - I'm better at building lasers than websites :)</i></p>
 </section>
