--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
       <li><strong>Timothy Kosse</strong>, First Vice Chair, Pima County Democratic Party, SCM</li>
       <li><strong>Debra Block</strong>, SCM, LD 6</li>
       <li><strong>Donna Durand</strong>, Former Chair and SCM, LD25</li>
+      <li><strong>Hunter Holt</strong>, Marana Unified School District Board Member, Candidate for LD17 State Senate</li>
     </ul>
     <!-- National Leaders -->
     <h3 class="text-2xl font-semibold text-gray-700 mt-10 mb-4">National Leaders</h3>
