color fix test 1

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     header {
       background-color: #111;
-      color: #fff;
+      color: #3c3b6e;
       position: fixed;
       padding: 1rem 50px;
       width: 100%;
@@ -65,7 +65,7 @@
     }
 
     h2 {
-      border-left: 6px solid #e00000;
+      border-left: 6px solid #b12236;
       padding-left: 0.75rem;
       color: #222;
       font-size: 1.8rem;
@@ -85,7 +85,7 @@
     a.button {
       display: inline-block;
       margin-top: 1rem;
-      background-color: #e00000;
+      background-color: #3c3b6e;
       color: white;
       padding: 0.7rem 1.2rem;
       border-radius: 4px;
@@ -94,7 +94,7 @@
     }
 
     a.button:hover {
-      background-color: #b30000;
+      background-color: #b12236;
     }
 
     @media (max-width: 768px) {
@@ -120,7 +120,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: #e01b22; /* Working Families Party red */
+    background-color: #b12236; /* Working Families Party red */
     color: white;
     padding: 16px 20px;
     font-size: 18px;
