--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     }
 
     header {
-      background-color: #111;
-      color: #3c3b6e;
+      background-color: #3c3b6e;
+      color: #fff;
       position: fixed;
       padding: 1rem 50px;
       width: 100%;
