--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       <li><strong>Sarah Stuart</strong>, President, Arizona College Democrats; Coconino County Democratic Party, Youth Committee Chair; PC, LD 7</li>
       <li><strong>Connie Cockrell</strong>, Chair, Gila County Democrats</li>
       <li><strong>Alison Porter</strong>, Co-Chair, ADP Small Business Council; Co-Founder, Save Our Schools</li>
-      <li><strong>Ben Armentrout</strong>, President, University of Arizona College Democrats; Vice-President, Arizona College Democrats; PC, LD-20</li>
+      <li><strong>Ben Armentrout</strong>, President, University of Arizona College Democrats; Youth Representative, ADP Progressive Council; PC, LD-20</li>
       <li><strong>Jess Staggers</strong>, Membership Director, Maricopa County Young Democrats; LD 29 SCM</li>
       <li><strong>Dhruv Rebba</strong>, Co-Chair ADP AAPI Caucus, ASU Young Dems Vice President</li>
       <li><strong>Susie Thornton</strong>, Secretary, LD 12, State Committee Member</li>
