--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     nav a {
       color: white;
-      margin-left: 1.5rem;
+      margin-left: 0;
       text-decoration: none;
       font-weight: bold;
       text-transform: uppercase;
@@ -149,7 +149,7 @@
     <a href="#why" class="nav-link">Why This Matters</a>
     <a href="#resolution" class="nav-link">Our Resolution</a>
     <a href="#endorsements" class="nav-link">Endorsements</a>
-    <a href="#about-us" class="nav-link"> About Us</a>
+    <a href="#about-us" class="nav-link">About Us</a>
   </nav>
 
 </header>
