--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       }
 
       nav a {
-        margin: 0.5rem 0;
+        margin: 0 0;
         white-space: normal;
         flex: 1 1 auto;
       }
@@ -145,11 +145,11 @@
 <header class="floating-header" id="floatingHeader">
   <h1>Stop Big Money AZ</h1>
   <nav>
-    <a href="#home" class="nav-link">Home</a>
+    <a href="#home" class="nav-link">Home     </a>
     <a href="#why" class="nav-link">Why This Matters</a>
     <a href="#resolution" class="nav-link">Our Resolution</a>
     <a href="#endorsements" class="nav-link">Endorsements</a>
-    <a href="#about-us" class="nav-link">About Us</a>
+    <a href="#about-us" class="nav-link">About Us      </a>
   </nav>
 
 </header>
