--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     nav a {
       color: white;
-      margin-left: 0;
+      margin-left: 1.5rem;
       text-decoration: none;
       font-weight: bold;
       text-transform: uppercase;
