colors and endorsement updates

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
 
     header {
-      background-color: #3c3b6e;
+      background-color: #002868;
       color: #fff;
       position: fixed;
       padding: 1rem 50px;
@@ -65,7 +65,7 @@
     }
 
     h2 {
-      border-left: 6px solid #b12236;
+      border-left: 6px solid #bf0a30;
       padding-left: 0.75rem;
       color: #222;
       font-size: 1.8rem;
@@ -85,8 +85,8 @@
     a.button {
       display: inline-block;
       margin-top: 1rem;
-      background-color: #3c3b6e;
-      color: white;
+      background-color: #bf0a30;
+      color: #fed700;
       padding: 0.7rem 1.2rem;
       border-radius: 4px;
       text-decoration: none;
@@ -266,8 +266,8 @@
       <li><strong>Sherri Johnson</strong>, LD 12 State Committee Member</li>
       <li><strong>James Jursich</strong>, PC LD 12</li>
       <li><strong>Nancy Scharff</strong>, Precinct Committee Person</li>
-      <li><strong>Karen Dubin</strong>, State Committee Member</li>
-      <li><strong>Ruthee Goldkorn</strong>, SCM LD 28</li>
+      <li><strong>Karen Dubin</strong>, SCM, LD 25</li>
+      <li><strong>Ruthee Goldkorn</strong>, SCM, LD 28</li>
       <li><strong>Marshall Militano</strong>, 2nd Vice Chair, LD 27</li>
       <li><strong>Mike Fogel</strong>,LD 1 Committee person; LD 1 Senate Candidate, 2022 and 2024</li>
       <li><strong>Shasta Guthrie</strong>,Yavapai County 2nd VC; LD1 SCM</li>
@@ -277,21 +277,38 @@
       <li><strong>James Perry Durand</strong>, LD25 First Vice Chair</li>
       <li><strong>William Olear</strong>, LD25 Chair</li>
       <li><strong>Marlene Bluestein</strong>, LD18 State Committee Member</li>
-      <li><strong>Susan Heck, M.S.</strong>, PC, LD 17</li>
+      <li><strong>Susan Heck, R.N., M.S.</strong>, PC, LD 17</li>
       <li><strong>Stephen Harshman</strong>, Chair, The Apache Junction Democrats</li>
       <li><strong>Lin Ogburn</strong>, SCM, LD 5</li>
-      <li><strong>Sean Feeney</strong>, PC, LD22</li>
+      <li><strong>Sean Feeney</strong>, PC, LD 22</li>
       <li><strong>Timothy Kosse</strong>, First Vice Chair, Pima County Democratic Party, SCM</li>
       <li><strong>Debra Block</strong>, SCM, LD 6</li>
       <li><strong>Donna Durand</strong>, Former Chair and SCM, LD25</li>
       <li><strong>Hunter Holt</strong>, Marana Unified School District Board Member, Candidate for LD17 State Senate</li>
+      <li><strong>Joan B. McDermott</strong>, MCDCC District 3 Chair</li>
+      <li><strong>Aaron Essif</strong>, SCM, LD 17</li>
+      <li><strong>Catherine Ralls</strong>, PC, LD 12</li>
+      <li><strong>Katherine Ginzel</strong>, SCM, LD 1</li>
+      <li><strong>Rivko Knox</strong>, SCM, LD 2</li>
+      <li><strong>Vivian Perry</strong>, SCM & Executive Committee Member, LD 1</li>
+      <li><strong>Rebecca Villalpando</strong>, SCM, LD 1</li>
+      <li><strong></strong></li>
+      <li><strong></strong></li>
     </ul>
     <!-- National Leaders -->
     <h3 class="text-2xl font-semibold text-gray-700 mt-10 mb-4">National Leaders</h3>
     <ul id="national-endorsements" class="space-y-2">
+      <li><strong>Bernie Sanders</strong>, US Senator, Vermont</li>
       <li><strong>Lawrence Lessig</strong>, Chair, Equal Citizens</li>
-      <li><strong>Rep. Ro Khanna</strong>, US Congressman</li>
-      <li><strong>Larry Cohen</strong>, Past President Communication Workers of America; Board Chair, Our Revolution; DNC member</li>
+      <li><strong>Ro Khanna</strong>, US Congressman, CA-17</li>
+      <li><strong>Larry Cohen</strong>, Past President Communication Workers of America; Board Chair, Our Revolution; DNC Member</li>
+      <li><strong>Bill de Blasio</strong>, Former Mayor of New York City</li>
+      <li><strong>Nomiki Konst</strong>, DNC Reform Commission Member</li>
+      <li><strong>Alan Minsky</strong>, Executive Director, Progressive Democrats of America</li>
+      <li><strong>Progressive Democrats of America</strong></li>
+      <li><strong>Our Revolution</strong></li>
+      
+      
     </ul>
   </div>
 </section>
