--- a/index.html
+++ b/index.html
@@ -229,15 +229,23 @@
       <li><strong>Rep. Brian Garcia</strong>, LD 8</li>
       <li><strong>Melissa Galarza</strong>, LD12 State Committee Member</li>
       <li><strong>Nicolas Mink</strong>, Vice Chair for the Arizona Democratic Party</li>
+      <li><strong>Shawnte Rothschild</strong>, ADP Vice Chair</li>
+      <li><strong>Sarah Stuart</strong>, President, Arizona College Democrats; Coconino County Democratic Party, Youth Committee Chair; PC, LD 7</li>
+      <li><strong>Laura Carter</strong>, Chair, Coconino County Democratic Party</li>
       <li><strong>Martín J. Quezada</strong>, Former State Senator, LD 29</li>
       <li><strong>Richard Andrade</strong>, Former State Representative, LD 29</li>
-      <li><strong>Sarah Stuart</strong>, President, Arizona College Democrats; Coconino County Democratic Party, Youth Committee Chair; PC, LD 7</li>
+      <li><strong>Celia Barotz</strong>, Former Vice Mayor of Flagstaff, PC LD 6, State Committee Member</li>
+      <li><strong>Eva Putzova</strong>, Former Flagstaff City Councilmember, LD6 State Committee Member</li>
       <li><strong>Connie Cockrell</strong>, Chair, Gila County Democrats</li>
       <li><strong>Alison Porter</strong>, Co-Chair, ADP Small Business Council; Co-Founder, Save Our Schools</li>
-      <li><strong>Ben Armentrout</strong>, President, University of Arizona College Democrats; Youth Representative, ADP Progressive Council; PC, LD-20</li>
-      <li><strong>Jess Staggers</strong>, Membership Director, Maricopa County Young Democrats; LD 29 SCM</li>
+      <li><strong>Ben Armentrout</strong>, President, University of Arizona College Democrats; Youth Representative, ADP Progressive Council, PC, LD20</li>
+      <li><strong>Jess Staggers</strong>, Membership Director, Maricopa County Young Democrats; SCM, LD 29</li>
+      <li><strong>Angela Buer</strong>, Former Chair LD 9 Dems</li>
+      <li><strong>Joan B. McDermott</strong>, MCDCC District 3 Chair</li>
+      <li><strong>Jeffrey Tucker</strong>, SCM, LD 13, At-Large Board Member</li>
+      <li><strong>Alex Kack</strong>, Executive Director, Pima County Democratic Party</li>
       <li><strong>Dhruv Rebba</strong>, Co-Chair ADP AAPI Caucus, ASU Young Dems Vice President</li>
-      <li><strong>Susie Thornton</strong>, Secretary, LD 12, State Committee Member</li>
+      <li><strong>Susie Thornton</strong>, Secretary & SCM, LD 12</li>
       <li><strong>Alex Ray Sanchez</strong>, Pima County Democratic Party Communications Chair</li>
       <li><strong>Ann Heitland</strong>, Former Senior Vice-Chair ADP and Former Coconino County Democratic Party Chair</li>
       <li><strong>Brianna Westbrook</strong>, Former Vice Chair of Arizona Democratic Party</li>
@@ -246,14 +254,14 @@
       <li><strong>Betts Putnam-Hidalgo</strong>, PC and SCM LD 20; Former Co-Chair, ADP Progressive Council</li>
       <li><strong>Athena Shao</strong>, Director of Political Affairs, AZ College Democrats</li>
       <li><strong>Suzi Walling</strong>, Former Chair LD29, Former President Grand Democrats, State Committee Member</li>
-      <li><strong>Michael Bradley</strong>, PC LD 4, State Committee Member</li>
+      <li><strong>Michael Bradley</strong>, SCM, LD 4</li>
       <li><strong>Marilyn Weissman</strong>, PC, LD 6</li>
-      <li><strong>Donna Hanley</strong>, LD 7, State Committee Member</li>
-      <li><strong>Charlie Silver</strong>, PC LD6, State Committee Member</li>
-      <li><strong>Ken Kenegos</strong>, LD 18 State Committee Member</li>
-      <li><strong>Angela Buer</strong>, Former Chair LD 9 Dems</li>
-      <li><strong>Mike Fogel</strong>, LD 1 Committee person; LD 1 Clean Election Senate Candidate, 2022 & 2024</li>
-      <li><strong>Kathy Fitzmaurice Yontz</strong>, LD 12 PC & State Committee Member</li>
+      <li><strong>Donna Hanley</strong>, SCM, LD 7</li>
+      <li><strong>Charlie Silver</strong>, SCM, LD6</li>
+      <li><strong>Ken Kenegos</strong>, SCM, LD 18</li>
+      <li><strong>Cathy Ransom</strong>, SCM, LD 1</li>
+      <li><strong>Mike Fogel</strong>, SCM, LD 1, '22 & '24 Clean Election Senate Candidate, LD 1</li>
+      <li><strong>Kathy Fitzmaurice Yontz</strong>, SCM, LD 12</li>
       <li><strong>Peter Cerchiara</strong>, LD 3 2nd VC Community Engagement</li>
       <li><strong>Jessica Chalberg</strong>, LD 21 PC</li>
       <li><strong>Roemello Chavez</strong>, LD 8 PC</li>
@@ -265,35 +273,60 @@
       <li><strong>Sharon Regen</strong>, LD 1 State Committee Member</li>
       <li><strong>Sherri Johnson</strong>, LD 12 State Committee Member</li>
       <li><strong>James Jursich</strong>, PC LD 12</li>
-      <li><strong>Nancy Scharff</strong>, Precinct Committee Person</li>
-      <li><strong>Karen Dubin</strong>, SCM, LD 25</li>
-      <li><strong>Ruthee Goldkorn</strong>, SCM, LD 28</li>
+      <li><strong>Nancy Scharff</strong>, LD1 State Committee Member</li>
+      <li><strong>Karen Dubin</strong>, State Committee Member</li>
+      <li><strong>Ruthee Goldkorn</strong>, SCM LD 28</li>
       <li><strong>Marshall Militano</strong>, 2nd Vice Chair, LD 27</li>
-      <li><strong>Mike Fogel</strong>,LD 1 Committee person; LD 1 Senate Candidate, 2022 and 2024</li>
-      <li><strong>Shasta Guthrie</strong>,Yavapai County 2nd VC; LD1 SCM</li>
-      <li><strong>George Mcgaughey</strong>, LD19 Chair</li>
+      <li><strong>Shasta Guthrie</strong>, Yavapai County 2nd VC; LD1 SCM</li>
+      <li><strong>George Mcgaughey</strong>, Chair, LD 19</li>
       <li><strong>Leigh Emrick</strong>, PC</li>
-      <li><strong>Bernard Buddy Fleitz</strong>, Arizona Democratic Party Committee Member </li>
-      <li><strong>James Perry Durand</strong>, LD25 First Vice Chair</li>
-      <li><strong>William Olear</strong>, LD25 Chair</li>
-      <li><strong>Marlene Bluestein</strong>, LD18 State Committee Member</li>
-      <li><strong>Susan Heck, R.N., M.S.</strong>, PC, LD 17</li>
+      <li><strong>Bernard Buddy Fleitz</strong>, State Committee member</li>
+      <li><strong>James Perry Durand</strong>, 1st Vice Chair LD 25</li>
+      <li><strong>William Olear</strong>, Chair, LD 25</li>
+      <li><strong>Marlene Bluestein</strong>, LD 18 State committee member</li>
+      <li><strong>Susan Heck, M.S., FNP (retired)</strong>, PC, LD 17</li>
       <li><strong>Stephen Harshman</strong>, Chair, The Apache Junction Democrats</li>
       <li><strong>Lin Ogburn</strong>, SCM, LD 5</li>
-      <li><strong>Sean Feeney</strong>, PC, LD 22</li>
-      <li><strong>Timothy Kosse</strong>, First Vice Chair, Pima County Democratic Party, SCM</li>
-      <li><strong>Debra Block</strong>, SCM, LD 6</li>
-      <li><strong>Donna Durand</strong>, Former Chair and SCM, LD25</li>
-      <li><strong>Hunter Holt</strong>, Marana Unified School District Board Member, Candidate for LD17 State Senate</li>
-      <li><strong>Joan B. McDermott</strong>, MCDCC District 3 Chair</li>
-      <li><strong>Aaron Essif</strong>, SCM, LD 17</li>
-      <li><strong>Catherine Ralls</strong>, PC, LD 12</li>
-      <li><strong>Katherine Ginzel</strong>, SCM, LD 1</li>
-      <li><strong>Rivko Knox</strong>, SCM, LD 2</li>
-      <li><strong>Vivian Perry</strong>, SCM & Executive Committee Member, LD 1</li>
-      <li><strong>Rebecca Villalpando</strong>, SCM, LD 1</li>
-      <li><strong></strong></li>
-      <li><strong></strong></li>
+      <li><strong>Sean Feeney</strong>, LD 22 PC</li>
+      <li><strong>Timothy Kosse</strong>, First Vice Chair Pima County Democratic Party, SCM</li>
+      <li><strong>Debra Block</strong>, SCM LD 6</li>
+      <li><strong>Donna Durand</strong>, Former Chair LD 25, PC, State Committee Person</li>
+      <li><strong>Catherine Ralls</strong>, PC, District 12</li>
+      <li><strong>Katherine Ginzel</strong>, LD 1 PC and State Committee Member</li>
+      <li><strong>Rivko Knox</strong>, LD 2 PC & State Cmte Member</li>
+      <li><strong>Vivian Perry</strong>, Executive Committee LD1, SCM LD1</li>
+      <li><strong>Rebecca Villalpando</strong>, SCM LD1</li>
+      <li><strong>Hunter Holt</strong>, 2nd Vice Chair of PCDP, President of Marana Unified School Board, State Senate Candidate LD 17</li>
+      <li><strong>Sue Heck, RN, MS, FNP(retired)</strong>, State Committee Member, PC LD17</li>
+      <li><strong>Aaron Essif</strong>, State Committee Member LD 17</li>
+      <li><strong>Dylan Williams</strong>, Democratic Voter, Mesa</li>
+      <li><strong>Jacob Carlson</strong>, Democrat voter, Snowflake</li>
+      <li><strong>Lynn cannon</strong>, Democratic voter</li>
+      <li><strong>Julie Tang</strong>, Precinct Committeeman, LD8, Rolling Hills Precinct</li>
+      <li><strong>Jacob Gross</strong>, Democratic Voter, Phoenix</li>
+      <li><strong>Amy Axelrod</strong>, LD8 voter</li>
+      <li><strong>Kiel Revenew</strong>, Democratic voter - LD 8</li>
+      <li><strong>Jacob Petray</strong>, Democratic Voter, Phoenix</li>
+      <li><strong>Margie Gomez</strong>, Democratic Voter</li>
+      <li><strong>Joshua Evans</strong>, PC 81</li>
+      <li><strong>David Gámezm</strong>, PC, Treasurer, LD 21</li>
+      <li><strong>Melissa Westbrook</strong>, LD12 PC, SCM</li>
+      <li><strong>Victoria Watson</strong>, UA College Dems Secretary</li>
+      <li><strong>Anna Makin</strong>, member LD10</li>
+      <li><strong>Ellie Yar</strong>, Democratic Voter, Mesa</li>
+      <li><strong>Marilyn Weissman</strong>, State Committee Member, LD 6</li>
+      <li><strong>Mike Nickerson</strong>, State Committee Member</li>
+      <li><strong>Eric Paschal</strong>, Democratic Voter, Phoenix LD-5</li>
+      <li><strong>Christopher Oakley</strong>, Democratic Voter, LD8</li>
+      <li><strong>Chris Donat</strong>, Candidate for Congress, AZ-06 and LD17 PC</li>
+      <li><strong>Gary Michiel Montiel</strong>, Precinct Committee Chair</li>
+      <li><strong>Rutger Hartmann Olden</strong>, Democratic Voter, Tucson</li>
+      <li><strong>Liila Dessen</strong>, University of Arizona College Democrat</li>
+      <li><strong>Paola Campos Martinez</strong>, Democratic Voter</li>
+      <li><strong>Nikkie Iglar</strong>, Communications Director, PCYD</li>
+      <li><strong>Ricky Spann</strong>, PC State Committee person</li>
+      <li><strong>Tyler Thalmann</strong>, Voter, Phoenix</li>
+      <li><strong>Henley Knex Gilles</strong>, Democratic voter, Tucson</li>
     </ul>
     <!-- National Leaders -->
     <h3 class="text-2xl font-semibold text-gray-700 mt-10 mb-4">National Leaders</h3>
